Create Company and User models

--- a/RisckTrack.WEB/Components/Pages/Login.razor
+++ b/RisckTrack.WEB/Components/Pages/Login.razor
@@ -5,6 +5,7 @@
 @inject UserSessionService Session
 @inject NavigationManager Navigation
 @inject AuthService AuthService
+@rendermode InteractiveServer
 
 <h3>Login</h3>
 
