--- a/RisckTrack.WEB/Components/Pages/Company.razor
+++ b/RisckTrack.WEB/Components/Pages/Company.razor
@@ -1,4 +1,5 @@
-﻿@page "/companias"
+﻿@page "/company"
+@inject HttpClient Http
 @using RisckTrack.WEB.Services
 @using RisckTrack.WEB.Models
 @inject CompanyService CompanyService
