--- a/RisckTrack.WEB/Components/Pages/User.razor
+++ b/RisckTrack.WEB/Components/Pages/User.razor
@@ -1,4 +1,5 @@
-﻿@page "/usuarios"
+﻿@page "/user"
+@inject HttpClient Http
 @using RisckTrack.WEB.Services
 @using RisckTrack.WEB.Models
 @inject UserService UserService
