--- a/RisckTrack.WEB/Components/Routes.razor
+++ b/RisckTrack.WEB/Components/Routes.razor
@@ -1,13 +1,6 @@
-﻿@using System.Reflection
-<Router AppAssembly="@typeof(Program).Assembly"
-        AdditionalAssemblies="new[] { typeof(RisckTrack.WEB.Components.Pages.User).Assembly }">
+﻿<Router AppAssembly="typeof(Program).Assembly">
     <Found Context="routeData">
-        <RouteView RouteData="@routeData" DefaultLayout="typeof(Layout.MainLayout)" />
-        <FocusOnNavigate RouteData="@routeData" Selector="h1" />
+        <RouteView RouteData="routeData" DefaultLayout="typeof(Layout.MainLayout)" />
+        <FocusOnNavigate RouteData="routeData" Selector="h1" />
     </Found>
-    <NotFound>
-        <LayoutView Layout="@typeof(Layout.MainLayout)">
-            <p>Página no encontrada.</p>
-        </LayoutView>
-    </NotFound>
 </Router>
